--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
+    <title>Prouge</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="main.js"></script>
+
+</head>
+<body>
+
+<main>
+    <h1>Diese Webseite befindet sich in der Entwicklung!</h1>
+    <h2 id="underTitle"></h2>
+</main>
+
+</body>
+</html>
