--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fitness</title>
+    <title>Yanick</title>
     <link rel="stylesheet" href="/stylesheets/index.css">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
