+ add About page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fitness</title>
+    <title>Home</title>
     <link rel="stylesheet" href="/stylesheets/index.css">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
@@ -30,7 +30,6 @@
                 <h1>c</h1>
                 <h2>k</h2>
             </div>
-            </p>
         </div>
     </div>
     <div id="navbar">
@@ -48,7 +47,6 @@
                 <h1>c</h1>
                 <h2>k</h2>
             </div>
-            </p>
         </div>
     </div>
 </header>
