--- a/pages/about.html
+++ b/pages/about.html
@@ -2,9 +2,86 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About</title>
+    <link rel="stylesheet" href="../stylesheets/about.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+
+
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@0,100;1,500&display=swap"
+          rel="stylesheet">
+
 </head>
 <body>
+<header>
+    <div id="navbar_mobile">
+        <span class="material-symbols-outlined" style="font-size: 6vh; color: #0099ff">menu</span>
+        <div class="text_wrapper_2">
+            <div class="title_2">
+                <h1>Y</h1>
+                <h2>a</h2>
+                <h1>n</h1>
+                <h2>i</h2>
+                <h1>c</h1>
+                <h2>k</h2>
+            </div>
+        </div>
+    </div>
+    <div id="navbar">
+        <div id="links">
+            <a href="../index.html" id="nav_home">Home</a>
+            <a href="#" id="nav_aboutme">About</a>
+            <a href="media.html" id="nav_media">Media</a>
+        </div>
+        <div class="text_wrapper_2">
+            <div class="title_2">
+                <h1>Y</h1>
+                <h2>a</h2>
+                <h1>n</h1>
+                <h2>i</h2>
+                <h1>c</h1>
+                <h2>k</h2>
+            </div>
+
+        </div>
+    </div>
+</header>
+
+<div class="wrapper">
+    <div id="text">
+        <div id="title_me">
+            <h1>Über</h1>
+            <h1 id="title_me_text">mich</h1>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+    <div id="logo">
+        <img src="../img/logo.png" alt="Logo">
+    </div>
+
+</div>
+<div id="particles-js">
+
+</div>
+
+
+<script src="../particles/particles.js"></script>
+<script src="../particles/app.js"></script>
+
+<footer>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#0099ff" fill-opacity="1"
+              d="M0,128L40,138.7C80,149,160,171,240,202.7C320,235,400,277,480,272C560,267,640,213,720,208C800,203,880,245,960,266.7C1040,288,1120,288,1200,288C1280,288,1360,288,1400,288L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+    </svg>
+</footer>
 
 </body>
 </html>
