--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
 <body>
 <header>
     <div id="navbar_mobile">
-        <span class="material-symbols-outlined" style="font-size: 6vh; color: #0099ff">menu</span>
+        <div class="dropdown">
+            <button class="dropbtn"> <span class="material-symbols-outlined" style="font-size: 6vh; color: #0099ff">menu</span>
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#" id="selected_home">Home</a>
+                <a href="/pages/about.html">About</a>
+                <a href="/pages/media.html">Media</a>
+            </div>
+        </div>
+
+
         <div class="text_wrapper_2">
             <div class="title_2">
                 <h1>Y</h1>
@@ -31,6 +42,7 @@
                 <h2>k</h2>
             </div>
         </div>
+
     </div>
     <div id="navbar">
         <div id="links">
