+ add media query

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,16 @@
 <body>
 <header>
     <div id="navbar_mobile">
-        <span class="material-symbols-outlined" style="font-size: 6vh; color: #0099ff">menu</span>
+        <div class="dropdown">
+            <button class="dropbtn"> <span class="material-symbols-outlined" style="font-size: 6vh; color: #0099ff">menu</span>
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="../index.html">Home</a>
+                <a href="#" id="selected_home">About</a>
+                <a href="/media.html">Media</a>
+            </div>
+        </div>
         <div class="text_wrapper_2">
             <div class="title_2">
                 <h1>Y</h1>
